# amogus-server-bot

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
amogus_server_bot/: bot.py  rolebot_cog.py  server_data.py
