[tool.poetry]
name = "amogus-server-bot"
version = "0.1.0"
description = ""
authors = ["Dorian Hanjo Loeben <dorian.loeben@alumni.fh-aachen.de>"]
readme = "README.md"
packages = [{include = "amogus_server_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
nextcord = {extras = ["speed"], version = "^2.6.0"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
